# schoolbot-v2

./: .env  .gitignore  README.md  bot.py  db.py  pyproject.toml  requirements.txt
core/: config.py
handlers/: admin.py  send_schedule.py  settings.py  start.py
keyboards/: grade_letter.py
systemd/: sch9bot.service
temp/: schedule.docx
utils/: downloading_file.py
