[project]
name = "schoolbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Melnikov",email = "mooneez.mnz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "aiogram (>=3.29.0,<4.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "aspose-words (>=26.6.0,<27.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
